# prawomir

./: .gitmodules  Main.hs  Model.hs  Parse.hs  ParseXml.hs  Scrape.hs  Scratch.hs  notes  prawomir.cabal  stack.yaml
play/: Main.hs
play-app/: Main.hs
tests/: XmlToModel.hs  pit-test.xml  pit1-157.vec  pit1-158.vec  pit1-159.vec  pit1.xml  pit2.xml  podstawaObliczeniaPodatku.table
tool/cleanup-xml/: Main.hs
tool/visualize-vectorimages/: template.html
