name:                prawomir
version:             0.1.0.0
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable play
  main-is: Main.hs
  other-modules: Scrape, ParseXml, Parse
  default-language: Haskell2010
  build-depends:  base, myprelude==0.7.8.0,
          directory, containers, old-locale, old-time, time, mtl,
          lens, text, HStringTemplate, bytestring,
          hxt, hxt-http, hxt-tagsoup, hxt-unicode, hxt-cache, zlib, attoparsec, parsec
  default-extensions: NamedFieldPuns, TypeSynonymInstances, FlexibleInstances,
              TupleSections, LambdaCase, RankNTypes, DeriveDataTypeable,
              MultiParamTypeClasses, FunctionalDependencies, FlexibleContexts, ScopedTypeVariables,
              NoImplicitPrelude, GeneralizedNewtypeDeriving, MultiWayIf, UndecidableInstances,
              TemplateHaskell, GADTs